fix(main): adjusted spacing between products and category title

--- a/src/modules/Category/index.scss
+++ b/src/modules/Category/index.scss
@@ -11,6 +11,7 @@
     letter-spacing: 0;
     text-align: left;
     color: #1D1F22;
+    margin-bottom: 88px;
 
   }
 
